@@ -1,12 +1,10 @@
 package com.kdcloud.server.rest.resource;
 
-import javax.persistence.EntityManager;
-
 import org.restlet.resource.Get;
 
 import com.kdcloud.server.entity.Report;
 import com.kdcloud.server.entity.Task;
-import com.kdcloud.server.jpa.EMService;
+import com.kdcloud.server.entity.User;
 import com.kdcloud.server.rest.api.ReportResource;
 
 public class ReportServerResource extends KDServerResource implements ReportResource {
@@ -15,11 +13,10 @@ public class ReportServerResource extends KDServerResource implements ReportReso
 	@Override
 	@Get
 	public Report retrive() {
-		EntityManager em = EMService.getEntityManager();
 		String taskId = getRequestAttribute(PARAM_ID);
-		String userId = getUserId();
-		Task task = em.find(Task.class, Long.valueOf(taskId));
-		if (!task.getApplicant().equals(userId))
+		Task task = taskDao.findById(new Long(taskId));
+		User user = userDao.findById(getUserId());
+		if (!task.getApplicant().equals(user))
 			forbid();
 		return task.getReport();
 	}
